kubernetes/whoami/01-services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: whoami
  labels:
    app: whoami

spec:
  ports:
    - protocol: TCP
      name: web
      port: 80
  selector:
    app: whoami
