kubernetes/whoami/03-ingressroutes.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: whoami
  labels:
    app: whoami

spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`whoami.#HOMELAB_DOMAIN#`)
      kind: Rule
      services:
        - name: whoami
          port: 80
  tls:
    certResolver: default

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: hidden
  labels:
    app: hidden

spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`hidden.#HOMELAB_DOMAIN#`)
      kind: Rule
      services:
        - name: whoami
          port: 80
      middlewares:
        - name: forward-auth
  tls:
    certResolver: default
